--- a/06-tic-tac-toe/index.html
+++ b/06-tic-tac-toe/index.html
@@ -1,3 +1,4 @@
+<!-- this html file is the one that in the end gets served to the visitor! -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,6 +8,11 @@
     <title>React Tic-Tac-Toe</title>
   </head>
   <body>
+    <header>
+      <!-- we don' have to specify the path for the images in the "public" folder, because these file will automaticalley be surfaced to the web app when being served to the visitors -->
+      <img src="game-logo.png" alt="hand-drawn tic tac toe game board" />
+      <h1>Tic-Tac-Toe</h1>
+    </header>
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
   </body>
